# dltype

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  benchmark.py  examples.py  pyproject.toml  setup.sh
.github/: CODEOWNERS  pr_workflow.yaml  pull_request_template.md
.github/workflows/: pr.yaml  publish.yaml
dltype/: BUILD.bazel  README.md  __init__.py  benchmark.py  dltype.py  parsers.py
dltype/_lib/: _constants.py  _core.py  _dependency_utilities.py  _dltype_context.py  _dtypes.py  _errors.py  _log_utils.py  _numpy_tensors.py  _parser.py  _symbolic_expressions.py  _tensor_type_base.py  _torch_tensors.py  _universal_tensors.py
dltype/tests/: BUILD.bazel  conftest.py  dltype_test.py  interop_test.py  parser_test.py
dltype/utilities/: benchmark.py
