[dependency-groups]
dev = [
  "numpy>=2.2.6",
  "onnx>=1.18.0",
  "pre-commit>=4.2.0",
  "pytest>=8.4.1",
  "ruff>=0.12.0",
  "torch>=1.4.0"
]

[project]
dependencies = [
  "pydantic>=2.0"
]
description = "An extremely lightweight typing library for torch tensors or numpy arrays. Supports runtime shape checking and data type validation."
name = "dltype"
readme = "README.md"
requires-python = ">=3.10"
version = "0.3.1"

[project.optional-dependencies]
numpy = [
  "numpy"
]
torch = [
  "torch>=1.4.0"
]
