[dependency-groups]
dev = [
  "numpy>=2.2.6",
  "onnx>=1.18.0",
  "pytest>=8.4.1",
  "ruff>=0.12.0",
  "torch>=1.4.0",
  "setuptools>=60.0.0",
  "pyright>=1.1.404"
]

[project]
dependencies = ["pydantic>=2.0"]
description = "An extremely lightweight typing library for torch tensors or numpy arrays. Supports runtime shape checking and data type validation."
keywords = ["pytorch", "numpy", "shape check", "type check"]
license = "Apache-2.0"
license-files = ["LICEN[CS]E.*"]
name = "dltype"
readme = "README.md"
requires-python = ">=3.10"
version = "0.4.0"

[project.optional-dependencies]
numpy = ["numpy"]
torch = ["torch>=1.4.0"]

[project.urls]
homepage = "https://github.com/stackav-oss/dltype"
repository = "https://github.com/stackav-oss/dltype.git"

[tool.pyright]
exclude = []
ignore = []
include = ["dltype"]
reportUnnecessaryTypeIgnoreComment = "error"
typeCheckingMode = "strict"
