[dependency-groups]
dev = [
  "numpy>=2.2.6",
  "onnx>=1.18.0",
  "pytest>=8.4.1",
  "ruff>=0.12.0",
  "torch>=1.4.0",
  "setuptools>=60.0.0",
  "pyright>=1.1.407",
  "pytest-cov>=7.0.0",
  "jax>=0.6.2",
  "onnxscript>=0.5.7"
]

[project]
dependencies = [
  'pydantic>=2.0;python_version<"3.14"',
  'pydantic>=2.12;python_version>="3.14"',
  "pydantic-settings>=2.12.0"
]
description = "An extremely lightweight typing library for torch tensors or numpy arrays. Supports runtime shape checking and data type validation."
keywords = ["pytorch", "numpy", "shape check", "type check"]
license = "Apache-2.0"
license-files = ["LICENSE"]
name = "dltype"
readme = "README.md"
requires-python = ">=3.10"
version = "0.10.0"

[project.optional-dependencies]
jax = ["jax>=0.6.2"]
numpy = ["numpy"]
torch = ["torch>=1.11.0"]

[project.urls]
homepage = "https://github.com/stackav-oss/dltype"
repository = "https://github.com/stackav-oss/dltype.git"

[tool.pyright]
exclude = []
ignore = []
include = ["dltype"]
reportUnnecessaryTypeIgnoreComment = "error"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
addopts = "--cov=dltype --cov-report lcov:lcov.info --cov-report html"

[tool.ruff]
indent-width = 4
line-length = 110
target-version = "py314"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
line-ending = "lf"

[tool.ruff.lint]
extend-select = [
  "ANN",
  "ARG",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "D",
  "E",
  "EM",
  "ERA",
  "F",
  "FA",
  "FBT",
  "G",
  "I",
  "ICN",
  "INP",
  "ISC",
  "LOG",
  "N",
  "NPY",
  "PERF",
  "PIE",
  "PLE",
  "PLR",
  "PT",
  "PTH",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "T20",
  "TC",
  "TID",
  "TRY",
  "W"
]
fixable = ["ALL"]
ignore = ["COM812", "D203", "D212", "D401", "E501", "PLR6301", "PLR0917"]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"dltype/tests/*" = ["D", "ARG", "FBT", "PLR2004", "T201"]
