load("//tools/rules:package.bzl", "package")
load("//tools/rules:python.bzl", "py_binary", "py_library")

package(owners = [
    "@dlangerm_evaav",
    "@jziglar_evaav",
    "@vzhu_evaav",
])

py_binary(
    name = "benchmark",
    srcs = ["benchmark.py"],
    deps = [
        ":dltype",
        "@pip//torch",
    ],
)

py_library(
    name = "dltype",
    srcs = ["dltype.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":parsers",
        "@pip//numpy",
        "@pip//pydantic",
        "@pip//pydantic_core",
        "@pip//torch",
        "@pip//typing_extensions",
    ],
)

py_library(
    name = "parsers",
    srcs = ["parsers.py"],
    visibility = ["__subpackages__"],
    deps = ["@pip//typing_extensions"],
)
