load("@aspect_rules_py//py:defs.bzl", "py_pytest_main")
load("//tools/rules:python.bzl", "py_test")

package(default_testonly = True)

py_pytest_main(
    name = "__test__",
    deps = ["@pip//pytest"],
)

py_test(
    name = "dltype_test",
    srcs = [
        "__test__",
        "dltype_test.py",
    ],
    main = ":__test__.py",
    deps = [
        ":__test__",
        "//kits/ml/typing:dltype",
        "@pip//numpy",
        "@pip//onnx",  # keep
        "@pip//pydantic",
        "@pip//pytest",
        "@pip//torch",
    ],
)

py_test(
    name = "parser_test",
    srcs = [
        "parser_test.py",
        ":__test__",
    ],
    main = ":__test__.py",
    deps = [
        ":__test__",
        "//kits/ml/typing:parsers",
        "@pip//pytest",
    ],
)
